# Changelog
# $Id$
nn-nn-14 - Version 5.1.34

  - Ant buildfile reworked to fix incompatibilities with latest Eclipse, to remove dependency from ant-contrib and to improve structure and documentation.

  - Fix for Bug#18474141, TESTSUITE.FABRIC TEST CASES FAIL IF NO FABRIC.TESTSUITE PROPERTIES PROVIDED

09-29-14 - Version 5.1.33

  - Fix for Bug#17441747, C/J DOESN'T SUPPORT XA RECOVER OUTPUT FORMAT CHANGED IN MYSQL 5.7.
    Test case was disabled for affected server versions 5.7.0 - 5.7.4.

  - Fix for Bug#19145408, Error messages may not be interpreted according to the proper character set

  - Fix for Bug#19505524, UNIT TEST SUITE DOES NOT CONSIDER ALL THE PARAMETERS PASSED TO BUILD.XML.

  - Fix for Bug#73474 (19365473), Invalid empty line in MANIFEST.MF

  - Fix for Bug#70436 (17527948), Incorrect mapping of windows timezone to Olson timezone.
    TimeZone mappings were revised in order to use latest data from IANA Time Zone Database and Unicode CLDR.

  - Fix for Bug73163 (19171665), IndexOutOfBoundsException thrown preparing statement.
    Regression test added. Fix was included in patch from 5.1.32: "Fix for failing tests when running test suite with Java 6+".

  - Added support for gb18030 character set

  - Fix for Bug#73663 (19479242), utf8mb4 does not work for connector/j >=5.1.13

  - Fix for Bug#73594 (19450418), ClassCastException in MysqlXADataSource if pinGlobalTxToPhysicalConnection=true

  - Fix for Bug#19354014, changeUser() call results in "packets out of order" error when useCompression=true.

  - Fix for Bug#73577 (19443777), CHANGEUSER() CALL WITH USECOMPRESSION=TRUE COULD LEAD TO IO FREEZE

  - Fix for Bug#19172037, TEST FAILURES WHEN RUNNING AGAINST 5.6.20 SERVER VERSION

08-04-14 - Version 5.1.32

  - Fix for Bug#71923 (18344403), Incorrect generated keys if ON DUPLICATE KEY UPDATE not exact.
    Additionally several methods in StringUtils were fixed/upgraded.
