@@ -3214,6 +3214,10 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
         if (getCacheResultSetMetadata()) {
             this.resultSetMetadataCache = new LRUCache(getMetadataCacheSize());
         }
+
+        if (getSocksProxyHost() != null) {
+            setSocketFactoryClassName("com.mysql.jdbc.SocksProxySocketFactory");
+        }
     }
 
     /**
