@@ -589,6 +589,8 @@ ConnectionProperties.slowQueryThresholdMillis=If 'logSlowQueries' is enabled, ho
 ConnectionProperties.slowQueryThresholdNanos=If 'useNanosForElapsedTime' is set to true, and this property is set to a non-zero value, the driver will use this threshold (in nanosecond units) to determine if a query was slow.
 ConnectionProperties.socketFactory=The name of the class that the driver should use for creating socket connections to the server. This class must implement the interface 'com.mysql.jdbc.SocketFactory' and have public no-args constructor.
 ConnectionProperties.socketTimeout=Timeout on network socket operations (0, the default means no timeout).
+ConnectionProperties.socksProxyHost=Name or IP address of SOCKS host to connect through.
+ConnectionProperties.socksProxyPort=Port of SOCKS server.
 ConnectionProperties.statementInterceptors=A comma-delimited list of classes that implement "com.mysql.jdbc.StatementInterceptor" that should be placed "in between" query execution to influence the results. StatementInterceptors are "chainable", the results returned by the "current" interceptor will be passed on to the next in in the chain, from left-to-right order, as specified in this property. 
 ConnectionProperties.strictFloatingPoint=Used only in older versions of compliance test
 ConnectionProperties.strictUpdates=Should the driver do strict checking (all primary keys selected) of updatable result sets (true, false, defaults to 'true')?
